add other function of inventory group

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
       - Inventary: guides/inventaire.md
       - Marketplace: guides/marketplace.md
       - Inventary group: guides/group.md
+      - Group management: guides/group_manager.md
       - Potential: guides/potential.md
       - Dashboard: guides/dashboard.md
       - Theming: guides/theming.md
@@ -63,6 +64,7 @@ plugins:
                 - Inventaire: guides/inventaire.fr.md
                 - Marché: guides/marketplace.fr.md
                 - Groupe d'enventaire: guides/group.fr.md
+                - Gestion des groupes d'inventaire: guides/group_manager.fr.md
                 - Potentiel: guides/potential.fr.md
                 - Tableau de bord: guides/dashboard.fr.md
                 - Thème: guides/theming.fr.md
