--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - Marketplace: guides/marketplace.md
       - Inventary group: guides/group.md
       - Group management: guides/group_manager.md
+      - Ad management: guides/adManagement.md
       - Potential: guides/potential.md
       - Dashboard: guides/dashboard.md
       - Theming: guides/theming.md
@@ -65,6 +66,7 @@ plugins:
                 - Marché: guides/marketplace.fr.md
                 - Groupe d'enventaire: guides/group.fr.md
                 - Gestion des groupes d'inventaire: guides/group_manager.fr.md
+                - Gestion des annonces: guides/adManagement.fr.md
                 - Potentiel: guides/potential.fr.md
                 - Tableau de bord: guides/dashboard.fr.md
                 - Thème: guides/theming.fr.md
